# puggle

./: .envrc  .gitignore  Cargo.toml  README.md  flake.nix
crates/extra-pulldown-cmark/: Cargo.toml  LICENSE
crates/highlight-pulldown-cmark/: Cargo.toml
crates/puggle/: Cargo.toml
crates/puggle/src/: main.rs
crates/puggle_lib/: Cargo.toml
crates/puggle_lib/src/: lib.rs
crates/puggle_notifier/: Cargo.toml
crates/puggle_notifier/src/: lib.rs
crates/puggle_server/: Cargo.toml  LICENSE
crates/puggle_server/src/: lib.rs
