[workspace]
resolver = "2"
members = ["crates/*"]

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[profile.dev.package.backtrace]
opt-level = 3

[workspace.package]
authors = ["SEKUN <software@sekun.net>"]
edition = "2021"
homepage = "https://github.com/sekunho/puggle"
include = ["../../LICENSE", "**/*.rs", "Cargo.toml"]
license = "AGPL-3.0-only"
repository = "https://github.com/sekunho/puggle"
rust-version = "1.79"
version = "0.1.0-alpha"

[workspace.dependencies]
puggle = { path = "crates/puggle", version = "0.1.0-alpha" }
puggle_lib = { path = "crates/puggle_lib", version = "0.1.0-alpha" }
puggle_server = { path = "crates/puggle_server", version = "0.1.0-alpha" }

# External dependencies

## Markdown
pulldown-cmark = { version = "0.12" }
highlight-pulldown = { version = "0.2" }

## Deserializing/serializing
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.10"

## Web
hyper = { version = "1.5", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = [ "tokio", "service" ] }
http-body-util = { version = "0.1" }
bytes = { version = "1.8" }
tower = { version = "0.5" }
tower-http = { version = "0.5", features = ["fs"] }

## Templating
minijinja = { version = "2.0", features = ["loader", "multi_template"] }
minijinja-contrib = { version = "2.0", features = ["datetime"] }

## Async
tokio = { version = "1.40", features = ["net", "rt-multi-thread", "macros"] }

## Configuration
config = { version = "0.13", default-features = false, features = ["yaml"] }

## CLI
clap = { version = "4.5", features = ["derive"] }

## Errors
thiserror = { version = "1.0" }
color-eyre = { version = "0.6.3" }

## Types
time = { version = "0.3", features = ["serde-well-known"] }
