[workspace]
resolver = "2"
members = ["crates/*"]

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[profile.dev.package.backtrace]
opt-level = 3

[workspace.package]
authors = ["SEKUN <software@sekun.net>"]
edition = "2021"
homepage = "https://github.com/sekunho/puggle"
include = ["../../LICENSE", "**/*.rs", "Cargo.toml"]
license = "AGPL-3.0-only"
repository = "https://github.com/sekunho/puggle"
rust-version = "1.79"
version = "0.1.0-alpha"

[workspace.dependencies]
puggle = { path = "crates/puggle", version = "0.1.0-alpha" }
puggle_lib = { path = "crates/puggle_lib", version = "0.1.0-alpha" }
puggle_server = { path = "crates/puggle_server", version = "0.1.0-alpha" }

# External dependencies

## Markdown
pulldown-cmark = { version = "0.13" }
syntect = { version = "5.2" }
two-face = { version = "0.4.3" }

## Deserializing/serializing
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

## Web
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["fs"] }
url = { version = "2.5", features = [ "serde" ] }

## Templating
minijinja = { version = "2.0", features = ["loader", "multi_template"] }
minijinja-contrib = { version = "2.0", features = ["datetime"] }

## Async
tokio = { version = "1.44", features = ["net", "rt-multi-thread"] }

## Configuration
config = { version = "0.13", default-features = false, features = ["yaml"] }

## CLI
clap = { version = "4.5", features = ["derive"] }

## Errors
thiserror = { version = "1.0" }
color-eyre = { version = "0.6.3" }

## Types
time = { version = "0.3", features = ["serde-well-known", "formatting"] }

## Muhhhh feeeds
rss = { version = "2.0", features = [ "atom" ] }
