[package]
name = "extra-pulldown-cmark"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
include.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
pulldown-cmark.workspace = true
syntect.workspace = true
two-face.workspace = true
