[package]
name = "puggle"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
puggle_lib.workspace = true
puggle_server.workspace = true

clap.workspace = true
config.workspace = true
serde.workspace = true
tokio.workspace = true
color-eyre.workspace = true
