[package]
name = "puggle_lib"
description = "a simple static site generator"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
pulldown-cmark = { workspace = true }
thiserror = { workspace = true }
minijinja = { workspace = true }
minijinja-contrib = { workspace = true }
serde = { workspace = true }
serde_yml = { workspace = true }
time = { workspace = true }
config = { workspace = true }
color-eyre.workspace = true
