[package]
name = "puggle_notifier"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
tokio.workspace = true
notify.workspace = true
notify-debouncer-mini.workspace = true
thiserror.workspace = true
futures.workspace = true
