[package]
name = "puggle_server"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
puggle_lib.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
bytes.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
thiserror = { workspace = true }
minijinja = { workspace = true }
minijinja-contrib = { workspace = true }
