[package]
name = "puggle_server"
license = "BSD-3-Clause"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
include.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
puggle_lib = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
minijinja = { workspace = true }
minijinja-contrib = { workspace = true }
